# task-app

./: .env.dev  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: main.yml
dashboard/: urls.py  views.py
dashboard/static/dashboard/css/: dashboard.css
dashboard/static/dashboard/js/: line_chart.js  pie_chart.js
dashboard/templates/dashboard/: index.html
entries/: api.py  forms.py  models.py  schemas.py  services.py  tests.py  urls.py  views.py
entries/data/: mock_tasks.csv
entries/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_priority.py  0003_seed_data.py
entries/static/entries/css/: dashboard.css  entries.css
entries/static/entries/js/: add-task.js  client.js  dashboard.js  edit-task.js  index.js  models.js
entries/static/entries/js/models/: task.js
entries/static/entries/js/services/: task.js
entries/templates/entries/: add_task.html  dashboard.html  edit_task.html  index.html
scripts/: deploy.sh
static/js/: client.js  service.js
task_app/: api_v0.py  api_v1.py  settings.py  urls.py  views.py
task_app/static/task_app/css/: task_app.css
task_app/templates/task_app/: index.html
users/: admin.py  backends.py  forms.py  managers.py  models.py  tests.py  views.py
users/management/commands/: createpasskey.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html
